<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contacto">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margenDiez"
        android:text="@string/tituloContacto"
        android:textSize="@dimen/titulos"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenVeinte"
        android:inputType="text"
        android:id="@+id/nomCont"
        android:hint="@string/hintNombre"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenDiez"
        android:id="@+id/mailCont"
        android:inputType="textEmailAddress"
        android:hint="@string/hintMail"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margenDiez"
        android:id="@+id/mensaje"
        android:inputType="textMultiLine"
        android:hint="@string/hintMensaje"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenVeinte"
        android:text="@string/enviar" />


</LinearLayout>